[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/UpgradesMenu.gd" type="Script" id=1]
[ext_resource path="res://Overlap/material_preview.png" type="Texture" id=2]

[node name="Upgrades" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="MainScreen" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Holder" type="VBoxContainer" parent="Panel/MainScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="Label" type="Label" parent="Panel/MainScreen/Holder"]
margin_right = 100.0
margin_bottom = 8.0
text = "Upgrades"
align = 1
valign = 1

[node name="Icon" type="Control" parent="Panel/MainScreen/Holder"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 30 )
rect_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Panel/MainScreen/Holder/Icon"]
position = Vector2( 7, 15 )
texture = ExtResource( 2 )
hframes = 16

[node name="Sprite2" type="Sprite" parent="Panel/MainScreen/Holder/Icon"]
position = Vector2( 21, 10 )
texture = ExtResource( 2 )
hframes = 16
frame = 6

[node name="Sprite3" type="Sprite" parent="Panel/MainScreen/Holder/Icon"]
position = Vector2( 17, 22 )
texture = ExtResource( 2 )
hframes = 16
frame = 4

[node name="Label" type="Label" parent="Panel/MainScreen/Holder/Icon"]
margin_left = 37.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
text = "Bat Souls"
align = 1
valign = 1

[node name="BackButton" type="Button" parent="Panel/MainScreen/Holder"]
margin_left = 39.0
margin_top = 46.0
margin_right = 61.0
margin_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="Panel/MainScreen/Holder/BackButton" to="." method="_on_BackButton_pressed"]
